Added custom method name Updated to support new json format Renamed app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,13 @@
             android:layout_weight="2"
             android:hint="@string/classname" />
 
+        <EditText
+            android:id="@+id/editTextMethodName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:hint="@string/methodname" />
+
         <Button
             android:id="@+id/btnHook"
             android:layout_width="wrap_content"
