--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:background="@android:color/black"
     android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <ImageButton
-        android:id="@+id/btnDonate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@android:color/black"
-        android:src="@drawable/btn_donate"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -43,9 +34,21 @@
         android:textColor="@android:color/holo_red_dark"
         android:textSize="20sp"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintBottom_toTopOf="@+id/btnDonate"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_editor_absoluteX="42dp" />
+
+    <ImageButton
+        android:id="@+id/btnDonate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:background="@android:color/black"
+        android:src="@drawable/btn_donate"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -71,30 +74,6 @@
             android:layout_gravity="center"
             android:text="@string/hooked_class"
             android:textColor="@android:color/holo_green_light" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/choose_version"
-            android:textColor="@android:color/holo_red_light"
-            app:layout_constraintBottom_toTopOf="@+id/useCustomClass"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <Spinner
-            android:id="@+id/igVersionsSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="53dp"
-            android:entries="@array/ig_version"
-            tools:layout_editor_absoluteX="208dp"
-            tools:layout_editor_absoluteY="706dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -124,6 +103,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hook" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/choose_version"
+            android:textColor="@android:color/holo_red_light"
+            app:layout_constraintBottom_toTopOf="@+id/useCustomClass"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Spinner
+            android:id="@+id/igVersionsSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="53dp"
+            android:entries="@array/ig_version"
+            tools:layout_editor_absoluteX="208dp"
+            tools:layout_editor_absoluteY="706dp" />
     </LinearLayout>
 
     <TextView
