--- a/app/src/main/res/drawable/thumb_layerlist.xml
+++ b/app/src/main/res/drawable/thumb_layerlist.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:gravity="center"
+    <item android:gravity="left"
         android:drawable="@drawable/thumb_ic"
         android:height="30dp"
-        android:width="30dp"
-        android:left="5dp"/>
+        android:width="30dp" />
 </layer-list>
