--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/howtotext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/top_red_text"
