--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,6 +126,21 @@
                 android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/EditTextCustom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            app:helperText="ex: Leave empty for default">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editTextSecondClassName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/classname"
+                android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/btnHook"
             android:layout_width="wrap_content"
